added cowsay to quote

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "cowsay-browser": "^1.1.8",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
